# fortran-cython-examples

./: CMakeLists.txt  README.md  notes.ipynb  setup.py
cmake-derived-type/: Untitled.ipynb
cmake-derived-type/MyProject/: CMakeLists.txt
cmake-derived-type/src/: myobjects.f90
derived-type/: CMakeLists.txt  pyproject.toml  setup.py  test.py
derived-type/MyProject/: _Mytype.pyx  __init__.py  myothertype_wrapper.f90  mytype_wrapper.f90
fortran_cython_examples/: __init__.py
notes/: general.md  getters_setters.md
src/: CMakeLists.txt  _fortran_cython_examples.pyx
src/characters/: CMakeLists.txt  characters.f90  characters.h  characters.pyx  characters_wrapper.f90
src/derived_type/: CMakeLists.txt  derived_type.f90  derived_type.h  derived_type.pyx  derived_type_wrapper.f90
src/dtype1/: CMakeLists.txt  dtype1.f90  dtype1.pyx  dtype1_pxd.pxd  dtype1_wrapper.f90  dtype1_wrapper.h
src/module_variable/: CMakeLists.txt  module_variable.f90  module_variable.h  module_variable.pyx  module_variable_pxd.pxd  module_variable_wrapper.f90  module_variable_wrapper.h
src/simple_function/: CMakeLists.txt  simple_function.f90  simple_function.h  simple_function.pyx  simple_function_wrapper.f90
src/simple_subroutine/: CMakeLists.txt  simple_subroutine.f90  simple_subroutine.h  simple_subroutine.pyx  simple_subroutine_wrapper.f90
tests/: test_characters.py  test_derived_type.py  test_module_variable.py  test_simple_function.py  test_simple_subroutine.py
